--- a/timer.html
+++ b/timer.html
@@ -2,7 +2,7 @@
 <html lang="PL-pl">
     <head>
         <meta charset="UTF-8">
-        <title>CubeTimer</title>
+        <title>CubeTimerG</title>
         <script type="text/javascript" src="https://unpkg.com/stackmat"></script>
 
 
